force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/SVMXA360__MaintenancePlanTemplate__c.object-meta.xml
<CustomObject>
    <description>Contains records for the Maintenance Plan Template header in Asset 360. Maintenance Plan Templates provide dynamic automation into the process of creating a Maintenance Plan in the org.</description>
    <label>Maintenance Plan Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Maintenance Plan Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>