force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__AssetQualificationCriteriaId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetQualificationCriteriaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expression to filter the applicable assets during Maintenance plan creation</description>
    <label>Asset Qualification Criteria</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SVMXA360__CONF_Expression__c.SVMXA360__ObjectAPIName__c</field>
            <operation>equals</operation>
            <value>Asset</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Maintenance Plan Templates</relationshipLabel>
    <relationshipName>Maintenance_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>