force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__DoesAutoGenerateWorkOrders__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DoesAutoGenerateWorkOrders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Work Orders are auto-generated for the Maintenance Plan. This field auto-populates a checkbox of the same name in the Maintenance Plan upon creation. NOTE: If this field is set to &apos;true&apos; on a Maintenance Plan, it will disable the ability to generate work orders manually.</description>
    <inlineHelpText>Indicates whether Work Orders are auto-generated for the Maintenance Plan. This field auto-populates a checkbox of the same name in the Maintenance Plan upon creation. NOTE: If this field is set to &apos;true&apos; on a Maintenance Plan, it will disable the ability to generate work orders manually.</inlineHelpText>
    <label>Auto-generate Work Orders</label>
    <type>Checkbox</type>
</CustomField>