force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__DoesGenerateUponCompletion__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DoesGenerateUponCompletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Programmatically indicates whether a Maintenance Plan should generate the new batch (for Work Order Generation) upon completing the last work order in the previous batch. The value in this field will auto-populate a field of the same name on the Maintenance Plan.</description>
    <inlineHelpText>Programmatically indicates whether a Maintenance Plan should generate the new batch (for Work Order Generation) upon completing the last work order in the previous batch. The value in this field will auto-populate a field of the same name on the Maintenance Plan.</inlineHelpText>
    <label>Generate New Batch Upon Completion</label>
    <type>Checkbox</type>
</CustomField>