force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__GenerationHorizon__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__GenerationHorizon__c</fullName>
    <description>Indicates the number of days before the date of the first work order in the next batch on which work order batches are generated. This value will auto-populate in the field of the same name on the Maintenance Plan upon creation.</description>
    <inlineHelpText>Indicates the number of days before the date of the first work order in the next batch on which work order batches are generated. This value will auto-populate in the field of the same name on the Maintenance Plan upon creation.</inlineHelpText>
    <label>Generation Horizon (Days)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>