force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__GenerationTimeframe__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__GenerationTimeframe__c</fullName>
    <description>Allows users to programmatically set the time in advance that work orders are generated in each batch for a Maintenance Plan. The unit of measurement is specified in Generation Timeframe Type. The values in both the fields are mapped to the Maintenance Plan created using this MP Template.</description>
    <inlineHelpText>Allows users to programmatically set the time in advance that work orders are generated in each batch for a Maintenance Plan. The unit of measurement is specified in Generation Timeframe Type. The values in both the fields are mapped to the Maintenance Plan created using this MP Template.</inlineHelpText>
    <label>Generation Timeframe</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>