force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__GenerationTimeframeType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__GenerationTimeframeType__c</fullName>
    <description>The unit of frequency for the Generation Timeframe field. The values in this field and the Generation Timeframe field are mapped to the Maintenance Plan created using this Maintenance Plan Template.</description>
    <inlineHelpText>The unit of frequency for the Generation Timeframe field. The values in this field and the Generation Timeframe field are mapped to the Maintenance Plan created using this Maintenance Plan Template.</inlineHelpText>
    <label>Generation Timeframe Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__UnitOfTime</valueSetName>
    </valueSet>
</CustomField>