force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__IsActive__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the Maintenance Plan Template is active or inactive. Only active templates should be used for the creation of a Maintenance Plan.</description>
    <inlineHelpText>Indicates whether the Maintenance Plan Template is active or inactive. Only active templates should be used for the creation of a Maintenance Plan.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>