force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__MaintenancePlanDuration__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanDuration__c</fullName>
    <description>The intended duration of a Maintenance Plan created using this Maintenance Plan template. The value in this field is related to the Maintenance Plan Unit of Time field and will influence the End Date field value for a Maintenance Plan created using the Template record.</description>
    <inlineHelpText>The intended duration of a Maintenance Plan created using this Maintenance Plan template. The value in this field is related to the Maintenance Plan Unit of Time field and will influence the End Date field value for a Maintenance Plan created using the Template record.</inlineHelpText>
    <label>Maintenance Plan Duration</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>