force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__MaintenancePlanProcessId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanProcessId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The config to be applied while processing the Maintenance Plan created from the template. If the field is left blank, then the default standard Process will be applied.</description>
    <label>Maintenance Plan Process</label>
    <referenceTo>SVMXA360__SM_MaintenancePlanProcess__c</referenceTo>
    <relationshipLabel>Maintenance Plan Templates</relationshipLabel>
    <relationshipName>Maintenance_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>