force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__MaintenancePlanTemplateProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanTemplateProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product related to this Maintenance Plan Template Record.</description>
    <inlineHelpText>The Product related to this Maintenance Plan Template Record.</inlineHelpText>
    <label>Maintenance Plan Template Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Maintenance Plan Templates</relationshipLabel>
    <relationshipName>Maintenance_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>