force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__MaintenancePlanUnitOfTime__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanUnitOfTime__c</fullName>
    <description>The indicated unit of time measurement for the Maintenance Plan Duration value on a Maintenance Plan Template. The value in this field is related to the Maintenance Plan Duration field and will influence the End Date field value for a Maintenance Plan created using the Template record.</description>
    <inlineHelpText>The indicated unit of time measurement for the Maintenance Plan Duration value on a Maintenance Plan Template. The value in this field is related to the Maintenance Plan Duration field and will influence the End Date field value for a Maintenance Plan created using the Template record.</inlineHelpText>
    <label>Maintenance Plan Unit of Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SVMXA360__UnitOfTime</valueSetName>
    </valueSet>
</CustomField>