force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__MaintenanceWindowEndDays__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenanceWindowEndDays__c</fullName>
    <description>Indicates the number of days after the Maintenance Plan Work Order&apos;s suggested service date in which the related service appointment can be scheduled. The value in this field will auto-populate a field of the same name on the Maintenance Plan, which will influence behavior for Work Order generation.</description>
    <inlineHelpText>Indicates the number of days after the Maintenance Plan Work Order&apos;s suggested service date in which the related service appointment can be scheduled. The value in this field will auto-populate a field of the same name on the Maintenance Plan, which will influence behavior for Work Order generation.</inlineHelpText>
    <label>Maintenance Window End (Days)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>