force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__SvcApptGenerationMethod__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SvcApptGenerationMethod__c</fullName>
    <description>Programmatically specifies how service appointments are generated when more than one asset is associated with the Maintenance Plan and work order generation method is set to &apos;One work order line item per asset&apos;. The value in this field will auto-populate a field of the same name on the Maintenance Plan.</description>
    <inlineHelpText>Programmatically specifies how service appointments are generated when more than one asset is associated with the Maintenance Plan and work order generation method is set to &apos;One work order line item per asset&apos;. The value in this field will auto-populate a field of the same name on the Maintenance Plan.</inlineHelpText>
    <label>Service Appointment Generation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SvcApptPerWorkOrder</fullName>
                <label>One service appointment per work order</label>
            </value>
            <value>
                <fullName>SvcApptPerWorkOrderLineItem</fullName>
                <label>One service appointment per work order line item</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>