force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__WorkOrderGenerationMethod__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderGenerationMethod__c</fullName>
    <description>Programmatically specifies how work orders are generated when more than one asset is associated with the Maintenance Plan. The value in this field will auto-populate a field of the same name on the Maintenance Plan.</description>
    <inlineHelpText>Programmatically specifies how work orders are generated when more than one asset is associated with the Maintenance Plan. The value in this field will auto-populate a field of the same name on the Maintenance Plan.</inlineHelpText>
    <label>Work Order Generation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkOrderPerAsset</fullName>
                <default>true</default>
                <label>One work order per asset</label>
            </value>
            <value>
                <fullName>WorkOrderLineItemPerAsset</fullName>
                <label>One work order line item per asset</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>