force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/fields/SVMXA360__WorkTypeId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Programmatically sets the work type for the Maintenance Plan record created using this Template. Work Type governs the duration, required skills and products, and linked articles inherited by work orders generated from the Maintenance Plan.</description>
    <inlineHelpText>Programmatically sets the work type for the Maintenance Plan record created using this Template. Work Type governs the duration, required skills and products, and linked articles inherited by work orders generated from the Maintenance Plan.</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Maintenance Plan Templates</relationshipLabel>
    <relationshipName>Maintenance_Plan_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>