force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/recordTypes/SVMXA360__Asset360.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__Asset360</fullName>
    <active>true</active>
    <description>To create Maintenance plan template for A360 condition-based Maintenance Plans</description>
    <label>Asset 360</label>
</RecordType>