force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/recordTypes/SVMXA360__Platform.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__Platform</fullName>
    <active>true</active>
    <description>To create Maintenance plan template for the platform maintenance plans</description>
    <label>Platform</label>
</RecordType>