force-app/main/default/objects/SVMXA360__MaintenancePlanTemplate__c/listViews/SVMXA360__AllMaintenancePlanTemplates.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllMaintenancePlanTemplates</fullName>
    <columns>NAME</columns>
    <columns>SVMXA360__Description__c</columns>
    <columns>SVMXA360__IsActive__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>A360 - All Maintenance Plan Templates</label>
</ListView>